[package]
name = "patronus"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.0", features = ["derive"] }
data-encoding = "2.10.0"
futures-lite = "2.6.1"
iroh = "0.97.0"
iroh-gossip = "0.97.0"
rand = "0.10.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = "1.50.0"
x25519-dalek = { version = "2.0.1", features = ["static_secrets"] }
hkdf = "0.12.3"
aes-gcm = "0.10.3"
sha2 = "0.10.8"
bip39 = { version = "2.2.2", default-features = false }
ratatui = "0.30.0"
socket2 = "0.6.3"
ed25519-dalek = "2.2.0"
ssh-key = "0.6.7"
