[package]
name = "patronus"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.0", features = ["derive"] }
data-encoding = "2.10.0"
futures-lite = "2.6.1"
rand = "0.8"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.50.0", features = ["full"] }
x25519-dalek = { version = "2.0.1", features = ["static_secrets"] }
hkdf = "0.12.3"
aes-gcm = "0.10.3"
sha2 = "0.10.8"
blake3 = "1.6.1"
ratatui = "0.30.0"
socket2 = "0.6.3"
ed25519-dalek = { version = "2", features = ["rand_core"] }
ssh-key = {version = "0.6.7", features = ["ed25519"]}
zstd = "0.13.3"
tokio-util = { version = "0.7.18", features = ["codec"] }
directories = "6.0.0"
